# web-crawler

./: .gitignore  README.md  main.py  pyproject.toml
.config/: .prettierignore
.github/: CODEOWNERS
web_crawler/: fetch.py
